# SWE-Project

./: CMakeLists.txt
Front End/: LogIn.html  SignUp.html  opportunities.html  opportunitiesPOC.html  preferences.html  preferencesPOC.html  profile.html
Matts Stuff/: Database.csv  Source1.cpp  keyword.cpp  readme
doc/: Presentation.pptx
src/backend/: CSV.cpp  CSV.h  Database.cpp  Database.csv  Database.h  Opportunity.cpp  Opportunity.h  Server.cpp  Server.h  Status.h  main.cpp
src/frontend/: LogIn.html  SignUp.html  opportunities.html  opportunitiesPOC.html  preferencesPOC.html  profile.html
src/frontend/ex/: index.html
src/frontend/user/opportunities/: matching_opportunities.html
src/frontend/user/preferences/: select_preferences.html
src/frontend/username/opportunities/: index.html
src/frontend/username/preferences/: index.html
